--- a/index.html
+++ b/index.html
@@ -3,26 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login System</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Auth0 Login System</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/1.19/auth0-spa-js.production.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="navbar">
+    <header>
         <div class="auth-buttons">
             <button id="login-btn">Log In</button>
             <button id="signup-btn">Sign Up</button>
         </div>
-        <div id="user-info" class="hidden">
-            <div id="user-greeting" class="dropdown">
-                <span id="greeting-text"></span>
-                <div class="dropdown-content">
-                    <button id="logout-btn">Log Out</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="script.js"></script>
+        <div id="user-info" class="hidden">
+            <span id="greeting-text"></span>
+            <button id="logout-btn">Log Out</button>
+        </div>
+    </header>
 </body>
 </html>
